# Iris_tutorial_popl21

./: .gitignore  .gitlab-ci.yml  LICENSE  Makefile  Makefile.coq.local  README.md  _CoqProject  coq-iris-tutorial-popl18.opam  coq-iris-tutorial-popl21.opam  opam
exercises/: Makefile  ProofMode.md  README.md  ex_01_swap.v  ex_02_sumlist.v  ex_03_spinlock.v  ex_04_parallel_add.v  ex_05_parallel_add_mul.v
solutions/: Makefile.coq.conf  _CoqProject  ex_01_swap.v  ex_02_sumlist.v  ex_03_spinlock.v  ex_04_parallel_add.v  ex_05_parallel_add_mul.v
talks/: README.md
talks/demo/: demo.v  part1.v  part2.v  part3.v  part4.v
