opam-version: "2.0"
maintainer: "The Iris Organization"
authors: "The Iris Organization"
homepage: "https://gitlab.mpi-sws.org/iris/tutorial-popl18"
bug-reports: "https://gitlab.mpi-sws.org/iris/tutorial-popl18/issues"
dev-repo: "git+https://gitlab.mpi-sws.org/iris/tutorial-popl18.git"

synopsis: "The Iris tutorial at POPL 2021"

depends: [
  "coq-iris-heap-lang" { (= "dev.2021-12-09.1.f52f9f6a") | (= "dev") }
]

build: [make "-j%{jobs}%"]
install: [] # This repo does not install
